Naming of datasets in Arithmetic
It often happens that a dataset (in a file) is needed more than once during
an Arithmetic process (for example with the `where' operator). But until
now, it was necessary to give the filename and extension containing the
dataset everytime it was needed. This would cause Arithmetic to read the
same dataset into memory multiple times while also making the command-line
very complex and hard to read.

With this commit a new `set-' operator has been defined that will give a
name to the popped dataset which can then be used multiple times in the
arguments to Arithmetic.

Also, since TIFF files can also have multiple extensions and Arithmetic can
now read them, the part where we check for the number of HDUs now checks
for all files with multiple extensions. To make this possible, the new
`gal_array_name_recognized_multiext' library function was defined.

--- a/NEWS
+++ b/NEWS
@@ -9,6 +9,9 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
     --enable-check-with-valgrind: Run `make check' tests within Valgrind.
 
   Arithmetic:
+    - `set-A': Set a name (`A' in this case) for the popped dataset. This
+               allows only reading the dataset it into memory once and
+               possibly using it many times.
     - `collapse-sum': collapse/remove a dimension by summing over it.
     - `collapse-mean': collapse/remove a dimension by averaging over it.
     - `collapse-number': Number of elements included in the collapse.
@@ -17,6 +20,7 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
     --colinfoinstdout: column information when writing to standard output.
 
   Library:
+    - gal_array_name_recognized_multiext: If format contains multiple datasets.
     - gal_dimension_collapse_sum: collapse/remove a dimension by summing.
     - gal_dimension_collapse_mean: collapse/remove a dimension by averaging.
     - gal_dimension_collapse_number: collapse/remove a dimension by number.
