Added statement for previous bug fix in NEWS file
I had forgot to add the bug fix statement for the previous commit in the
NEWS file. This is now corrected.

--- a/NEWS
+++ b/NEWS
@@ -53,7 +53,7 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
   bug #54297: No Match output when --notmatched called and no match.
   bug #54298: Table not writing array when there are no rows.
   bug #54312: Crash when CFITSIO doesn't have fits_is_reentrant function.
-
+  bug #54346: Non '-I' or non '-L' strings in CPPFLAGS or LDFLAGS cause crash.
 
 
 
