Arithmetic's where operator checks for blank values
When the condition operand of the `where' operator has blank values, this
operator assumed they are true. With this commit, a check is done on the
condition operand and only when it is not blank *and* non-zero will the
value be modified.

This bug was reported by Dmitry Oparin.

This fixes bug #54358.

--- a/NEWS
+++ b/NEWS
@@ -60,6 +60,8 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
   bug #54298: Table not writing array when there are no rows.
   bug #54312: Crash when CFITSIO doesn't have fits_is_reentrant function.
   bug #54346: Non '-I' or non '-L' strings in CPPFLAGS or LDFLAGS cause crash.
+  bug #54358: Arithmetic's where, not ignoring blank values in condition.
+
 
 
 
