Shell to call Libtool within BuildProgram set at configure time
Some operating systems (Ubuntu in this case) set the default shell to dash,
it is a minimalist POSIX compliant shell. Therefore it doesn't have many
features that are available in Bash (including the `+=' operator). On the
other hand, older versions of Libtool (2.4.2 in this case) don't check for
the availability of the `+=' operator by the shell before using it,
therefore BuildProgram crashes in such cases.

Newer versions of libtool do address this problem (checked with version
2.4.6), but we don't want to force the user to modify their installation as
much as possible: only if there is no other way.

To fix this, BuildProgram now doesn't call Libtool directly. It first calls
the shell to run Libtool (specified with the `GAL_CONFIG_GNULIBTOOL_SHELL'
macro which is set at configure time), and then runs Libtool with the
appropriate shell.

The `GAL_CONFIG_GNULIBTOOL_SHELL' macro is found during configure time. It
first checks `sh', then `bash', then `zsh' (other shells can be added
later) and sets the first one where Libtool operates without any error.

This bug was reported by Aaron Watkins.

This fixes bug #54430.

--- a/NEWS
+++ b/NEWS
@@ -66,7 +66,7 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
   bug #54346: Non '-I' or non '-L' strings in CPPFLAGS or LDFLAGS cause crash.
   bug #54358: Arithmetic's where, not ignoring blank values in condition.
   bug #54406: Insufficient sanity checks in mode symmetricity calculation.
-
+  bug #54430: BuildProgram fails with older Libtool versions on dash.
 
 
 
